app/src/main/kotlin/com/example/dmitry/grades/ui/base/ui/errors/LoadingView.kt
package com.example.dmitry.grades.ui.base.ui.errors

interface LoadingView {

    fun showLoading(state: Boolean)

    fun hideLoading(state: Boolean)
}